deployment/k8s/ingress.yaml
// deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tmf632-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /tmf-api/partyManagement/v4
        pathType: Prefix
        backend:
          service:
            name: tmf632-service
            port:
              number: 8080
